# AWS_CPP_SDK_authentication_sample

./: CMakeLists.txt  README.md  main.cpp
